syntax = "proto3";
package proto;

option go_package = "./proto/proto";

message ServiceAaDoRequest{
  int32 num = 1;
}

message ServiceAaDoResponse{
  int32 new_num = 1;
}

message ServiceAaMsgReq{
  string context = 1;
}

message EmptyA{}

service ServiceAa {
  rpc Do(ServiceAaDoRequest) returns (ServiceAaDoResponse){}
  rpc Do2(ServiceAaDoRequest) returns (ServiceAaDoResponse){}
  rpc Msg(ServiceAaMsgReq) returns (EmptyA) {}
  rpc MsgProxy(ServiceAaMsgReq) returns (EmptyA) {}
  rpc GraceStopTest(ServiceAaMsgReq) returns (ServiceAaMsgReq) {}
}